# smackerel

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .gitleaksignore  .prettierignore  .smackerel.local.env.example  DESIGN-DOC.md  Dockerfile  LICENSE  README.md  docker-compose.e2e-ui.override.yml  docker-compose.prod.yml  docker-compose.yml  go.mod  go.sum  policy-exception-baseline.json  smackerel.sh
ml/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
ml/app/: agent.py  agent_config.py  auth.py  card_categories.py  domain.py  drive_classify.py  drive_extract.py  embedder.py  intelligence.py  keep_bridge.py  main.py  metrics.py  nats_client.py  nats_contract.py  ocr.py  ollama_keepalive.py  ollama_thinking.py  pdf_extract.py  photos.py  processor.py  receipt_detection.py  schemas.py  synthesis.py  url_validator.py  validation.py  whisper_transcribe.py  youtube.py
ml/tests/: conftest.py  test_agent.py  test_agent_config.py  test_agent_log_redaction.py  test_auth.py  test_auth_module_import_fail_loud.py  test_build_surface_pins.py  test_card_categories.py  test_chat_dispatch_hosted_spec096.py  test_chat_dispatch_parity_spec096.py  test_chat_dispatch_secret_scrub_spec096.py  test_chat_live_ollama.py  test_domain.py  test_drive_classify.py  test_drive_contract.py  test_drive_extract.py  test_embedder.py  test_health_model_loaded.py  test_health_strict_degraded.py  test_intelligence_handlers.py  test_intent_compiler.py  test_intent_compiler_provider_fixture.py  test_keep.py  test_keep_bridge_handshake.py  test_keep_bridge_warnings.py  test_main.py  (+19 more)
(+5949 files in other folders)
