[project]
name = "smackerel-ml"
version = "0.1.0"
description = "Smackerel ML sidecar — LLM gateway, embeddings, transcription"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "nats-py>=2.9.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "PyYAML>=6.0",
    "prometheus_client>=0.21.0",
]

[project.optional-dependencies]
runtime = [
    "litellm>=1.50.0",
    "sentence-transformers>=3.3.0",
    "youtube-transcript-api>=0.6.3",
    "trafilatura>=1.12.0",
    "pypdf>=4.1.0",
    "numpy>=1.26.0",
    "jsonschema>=4.23.0",
]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.8.0",
    "jsonschema>=4.23.0",
    "pypdf>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
